# fake-patient-genertor

./: README.md  fake-patients.csv  fp-gen.py  pyproject.toml  sample-fake-patients.csv
